# shadow-rs

./: .gitattributes  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  rust-toolchain.toml  taplo.toml
client/: Cargo.toml
client/src/: cli.rs  main.rs
client/src/modules/: callback.rs  driver.rs  injection.rs  misc.rs  mod.rs  module.rs  network.rs  process.rs  registry.rs  thread.rs
client/src/utils/: keylogger.rs  macros.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: enums.rs  ioctls.rs  lib.rs  structs.rs
crates/shadow-core/: Cargo.toml
crates/shadow-core/src/: driver.rs  error.rs  injection.rs  lib.rs  misc.rs  module.rs  network.rs  offsets.rs  process.rs  thread.rs
crates/shadow-core/src/callback/: mod.rs  notify_routine.rs  object.rs  registry.rs
crates/shadow-core/src/data/: enums.rs  externs.rs  mod.rs  structs.rs  types.rs
crates/shadow-core/src/registry/: callback.rs  mod.rs  utils.rs
crates/shadow-core/src/utils/: address.rs  attach.rs  file.rs  handle.rs  lock.rs  mdl.rs  mod.rs  patterns.rs  pool.rs  uni.rs
doc/: callback.md  driver.md  injection.md  misc.md  module.md  network.md  process.md  registry.md  thread.md
driver/: Cargo.toml  Makefile.toml  build.rs  shadow.inx
driver/.cargo/: config.toml
driver/src/: allocator.rs  callback.rs  ioctls.rs  lib.rs  util.rs
scripts/: install-driver.ps1  script.ps1
